eks/iac/kubectl/deploy-namesystem.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: gateway-api-controller
  name: aws-application-networking-system
