eks/iac/kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: spring
  labels:
    app: spring-api
spec:
  selector:
    app: spring-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
