eks/iac/kubectl/gateway-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-route
spec:
  hostnames:
    - eks.internal.heeki.cloud
  parentRefs:
  - name: your-vpc-lattice-service-network-name
    sectionName: https-custom-certificate
  rules:
  - backendRefs:
    - group: spring-group
      name: spring-service
      kind: Service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
